<resources>
    <string name="app_name">FeaturesXML</string>
    <string name="start_speech_to_text">Start Speech to Text</string>
    <string name="text_to_speech">Text to Speech</string>
    <string name="speech_activity">Speech Activity</string>
    <string name="result_from_speech">Result from Speech!</string>
    <string name="next">Next</string>
    <string name="voice_no_pop_up">Voice No Pop Up</string>
    <string name="result_here">Result here</string>
    <string name="button">Button</string>
</resources>